just finished the responsive navbar for the homepage

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         Flexibility <br><br></div></h2>
     </div>
     <div class="imageyoga">
-        <img src="./images/lady-in-yoga.jpg" alt="A pretty girl doing yoga">
+        <img src="images/lady-in-yoga.jpg" alt="A pretty girl doing yoga">
     </div>
 
 </div>
