--- a/classes.html
+++ b/classes.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="indexmobile.css">
 </head>
 <body>
+    <div class="mobile-menu">
+        <img src="./images/mobile/mobile-menu.png" alt="mobile-menu" id="menu">
+        <img src="./images/mobile/mobile-close.png" alt="mobile-close" id="menu-close">
+        </div>
     <a href="index.html" class="remo" >
     <h1>Belle & Carrie</h1>
     <h3>REHABILITATION YOGA</h3>
@@ -25,10 +29,14 @@
         <li class="about" ><a href="index.html">HOME</a></li>
         <li class="about" > <a href="about.html">ABOUT</a> </li>
         <li class="active classes" >  <a href="classes.html">CLASSES</a>
+            <div class="mobile-ex">
+                <img src="images/mobile/mobile-expand.png" alt="mobile-expand" id="expand">
+                <img src="images/mobile/mobile-collapse.png" alt="mobile-collapse" id="collapse">
+            </div>
             <ul>
                 <li class="about inst" ><a href="instructors.html">INSTRUCTORS</a></li>
             </ul>
-            <span class="mobile-submenu " onclick="submenu(2)" ></span>
+    
         </li>
         <li class="about" > <a href="contact.html">CONTACT</a></li>
         <li class="about" > <a href="blog.html">BLOG</a></li>
@@ -91,5 +99,6 @@
     </div>
 
 </div  >
+<script src="main.js"></script>
 </body>
 </html>
