about cleaning code and making more responsive

--- a/instructors.html
+++ b/instructors.html
@@ -36,7 +36,7 @@
             <ul>
                 <li class="active inst" ><a href="instructors.html">INSTRUCTORS</a></li>
             </ul>
-            <span class="mobile-submenu " onclick="submenu(2)" ></span>
+            <!-- <span class="mobile-submenu " onclick="submenu(2)" ></span> -->
         </li>
         <li class="about" > <a href="contact.html">CONTACT</a></li>
         <li class="about" > <a href="blog.html">BLOG</a></li>
