--- a/classes.html
+++ b/classes.html
@@ -12,8 +12,9 @@
     <meta name="HandheldFriendly" content="true"> -->
 
     <title>Rehabilitation Yoga</title>
-    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="indexmobile.css">
+    <link rel="stylesheet" href="index.css">
+   
 </head>
 <body>
     <div class="mobile-menu">
@@ -50,21 +51,21 @@
         <div class="classtime">
             
             <p class="head">Beginners </p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in 
             neque condimentum, dignissim libero sit amet, blandit felis.
             <br>
             MWF : 8AM to 9AM <br>
             TTHS : 10AM-11AM
             <br><br>
             <p class="head">Intermediate</p>
-            Cras dignissim est sed lorem suscipit, ut ultrices dolor tempus. Cras <br>
+            Cras dignissim est sed lorem suscipit, ut ultrices dolor tempus. Cras
             venenatis gravida scelerisque. Aenean sit amet massa dui
             <br>
             MWF : 10AM-11AM <br>
             TTHS : 1PM-2PM
             <br><br>
             <p class="head">Advanced </p>
-            Quisque non quam lorem. Nulla eu placerat leo. Suspendisse eros risus, <br>
+            Quisque non quam lorem. Nulla eu placerat leo. Suspendisse eros risus,
             viverra sed fermentum vitae, gravida ac tellus.
             <br>
             MWF : 1PM-2PM <br>
