--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <meta name="HandheldFriendly" content="true"> -->
 
     <title>Rehabilitation Yoga</title>
-    <link rel="stylesheet" href="index.css">
+    
     <link rel="stylesheet" href="indexmobile.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="mobile-menu">
@@ -54,8 +55,10 @@
         <div class="yogs">   YOGA <br></div>
         <div class="purple"></div>
         <div class="better" > <br> For Better 
-        <br>Health & <br> 
-        Flexibility <br><br></div></h2>
+            <br>Health & <br> 
+            Flexibility <br><br>
+        </div>
+        </h2>
     </div>
     <div class="imageyoga">
         <img src="images/lady-in-yoga.jpg" alt="A pretty girl doing yoga">
